--- a/compilador/Views/Home/Index.cshtml
+++ b/compilador/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
-﻿@{
+﻿@using compilador.Controllers
+@{
     ViewData["Title"] = "Compilador JL";
+
+    // Importa el namespace necesario
+
+    // Crea una instancia del controlador
+
 }
+
+
 
 <div class="logo-container">
     <img src="../images/desarrollo.png" width="100">
@@ -47,8 +55,8 @@
             <div id="sintacticoOutput" class="output"></div>
         </div>
         <div class="button-container">
-            <button id="lexicoButton" class="ov-btn-grow-skew">Analizar Léxico 😄</button>
-            <button id="sintacticoButton" class="ov-btn-grow-skew">Analizar Sintáctico 🚀</button>
+            <button class="ov-btn-grow-skew"onclick="analyzeLexico()">Analizar léxicamente</button>
+            <button id="sintacticoButton" onclick="analyzeSintactico()" class="ov-btn-grow-skew">Analizar Sintáctico 🚀</button>
             <button id="semanticoButton" class="ov-btn-grow-skew">Analizar Semántico 🔍</button>
             <button id="compilarButton" class="ov-btn-grow-skew">Analizar ▶️</button>
             <button id="limpiarButton" class="ov-btn-grow-skew">Limpiar 🧹</button>
